fifty_gramx/lib/community/apps/gramx/seventy/zero/ethos/pods/configurations/multiverse/resources/namespaced/multiverse-chains-identity-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-chains
  namespace: ethosverse
spec:
  replicas: 1
  selector:
    matchLabels:
      epod: mv-xc-id
  template:
    metadata:
      labels:
        epod: mv-xc-id
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: mv-xc-universe-id-container
          image: ethosindia/chains-multiverse-universe-identity:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 1001
              name: xc-uv-id
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.08"
            limits:
              memory: "256Mi"
              cpu: "0.2"
        - name: mv-xc-community-collaborar-id-container
          image: ethosindia/chains-multiverse-community_collaborator-identity:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 2001
              name: xc-cc-id
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.08"
            limits:
              memory: "256Mi"
              cpu: "0.2"
