fifty_gramx/lib/community/apps/gramx/seventy/zero/ethos/pods/configurations/multiverse/resources/namespaced/multiverse-filesystem-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filesystem
  namespace: ethosverse
spec:
  replicas: 1
  selector:
    matchLabels:
      epod: mv-fs
  template:
    metadata:
      labels:
        epod: mv-fs
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: mv-fs-container
          image: ethosindia/filesystem-multiverse:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4001
              name: bootstrap
            - containerPort: 5001
              name: control
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.08"
            limits:
              memory: "256Mi"
              cpu: "0.2"
