fifty_gramx/lib/community/apps/gramx/seventy/zero/ethos/pods/configurations/multiverse/resources/namespaced/multiverse-filesystem-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multiverse-filesystem-service
  namespace: ethosverse
spec:
  type: NodePort
  selector:
    epod: mv-fs
  ports:
    - name: mv-fs-control
      port: 5001
      targetPort: 5001
      nodePort: 30501
